--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
       min-width:0;
       display:flex;
       flex-direction:column;
-      justify-content:space-between; /* label top, value bottom */
+      justify-content:space-between;
       min-height:78px;
     }
     .stat b{
@@ -495,21 +495,24 @@
 
       button{ padding:8px 10px; border-radius:12px; font-size:12px; }
 
-      /* (3) info panels narrower */
+      /* (3) info panels - keep thin like desktop */
       .container{ padding:0 12px; }
+
       .infoBar{
-        grid-template-columns:1fr;
-        gap:6px;
-        padding:8px;
+        grid-template-columns: repeat(4, minmax(0, 1fr));
+        gap:10px;
+        padding:10px 12px;
+        border-radius:16px;
+      }
+
+      .infoItem{
+        padding:10px 10px;
+        min-height:auto;
         border-radius:14px;
       }
-      .infoItem{
-        padding:6px 10px;
-        min-height:38px;
-        border-radius:12px;
-      }
-      .infoItem b{ font-size:10px; }
-      .infoItem span{ font-size:13px; }
+
+      .infoItem b{ font-size:11px; }
+      .infoItem span{ font-size:14px; }
 
       main{ padding:12px; }
 
@@ -574,6 +577,11 @@
 
       .tblWrap{ overflow-x:auto; }
       .tbl{ min-width:920px; }
+    }
+
+    /* fallback pro hodně úzké mobily */
+    @media (max-width: 380px){
+      .infoBar{ grid-template-columns: repeat(2, minmax(0, 1fr)); }
     }
   </style>
 </head>
