--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
       min-width:0;
       display:flex;
       flex-direction:column;
-      justify-content:space-between;
+      justify-content:space-between; /* label top, value bottom */
       min-height:78px;
     }
     .stat b{
@@ -495,24 +495,21 @@
 
       button{ padding:8px 10px; border-radius:12px; font-size:12px; }
 
-      /* (3) info panels - keep thin like desktop */
+      /* (3) info panels narrower */
       .container{ padding:0 12px; }
-
       .infoBar{
-        grid-template-columns: repeat(4, minmax(0, 1fr));
-        gap:10px;
-        padding:10px 12px;
-        border-radius:16px;
-      }
-
-      .infoItem{
-        padding:10px 10px;
-        min-height:auto;
+        grid-template-columns:1fr;
+        gap:6px;
+        padding:8px;
         border-radius:14px;
       }
-
-      .infoItem b{ font-size:11px; }
-      .infoItem span{ font-size:14px; }
+      .infoItem{
+        padding:6px 10px;
+        min-height:38px;
+        border-radius:12px;
+      }
+      .infoItem b{ font-size:10px; }
+      .infoItem span{ font-size:13px; }
 
       main{ padding:12px; }
 
@@ -577,11 +574,6 @@
 
       .tblWrap{ overflow-x:auto; }
       .tbl{ min-width:920px; }
-    }
-
-    /* fallback pro hodně úzké mobily */
-    @media (max-width: 380px){
-      .infoBar{ grid-template-columns: repeat(2, minmax(0, 1fr)); }
     }
   </style>
 </head>
@@ -658,7 +650,7 @@
 
     <footer>
       <span>Tip: Klikni na jméno hráče pro detail.</span>
-      <span>verze: 0.9.14-beta</span>
+      <span>verze: beta 0.9</span>
     </footer>
   </div>
 </main>
