--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="subtitle">by Grail Series</div>
         <div class="muted">Data načítána z Google Sheets</div>
         <div class="credit muted">
-          Za veškerá data děkujeme <b>Ervinovi Kučovi</b>, který data současně zpravuje.
+          Za veškerá data děkujeme <b>Ervinovi Kučovi</b>, který data současně spravuje.
         </div>
       </div>
     </div>
