--- a/index.html
+++ b/index.html
@@ -17,9 +17,11 @@
       <div>
         <h1>DC ELO žebříček</h1>
         <div class="subtitle">by Grail Series</div>
-        <div class="muted">Data načítána z Google Sheets</div>
         <div class="credit muted">
-          Za veškerá data děkujeme <b>Ervinovi Kučovi</b>, který data současně spravuje.
+          Tento projekt přináší ELO hodnocení pro Duel Commander komunitu. Naším cílem je spravedlivě hodnotit výkony hráčů, podpořit soutěživost a nabídnout přehledný dlouhodobý žebříček.
+        </div>
+        <div class="credit muted">
+          Nechcete mít na webu uvedené své jméno? <a class="inlineLink" id="anonLink" href="#">Klikněte sem</a>.
         </div>
       </div>
     </div>
@@ -28,6 +30,11 @@
       
       <div class="headerRightTop">
         <div class="badge" id="lastDataBadge">načteno: načítám…</div>
+
+        <button class="btnSupport" id="supportBtn" type="button" aria-label="Podpořit" title="Podpořit">
+          <span class="btnSupportIcon" aria-hidden="true">★</span>
+          <span class="btnSupportText">Podpořit</span>
+        </button>
 
         <button class="btnIcon" id="menuBtn" type="button" aria-label="Menu" title="Menu">
           ☰
@@ -117,6 +124,119 @@
 </main>
 
 <script type="module" src="modal.js"></script>
+<script type="module">
+  const isMobileModal = () => window.matchMedia('(max-width: 760px)').matches;
+
+  // Podpořit (QR + účet)
+  const supportBtn = document.getElementById('supportBtn');
+  if (supportBtn) {
+    supportBtn.addEventListener('click', () => {
+      const mobile = isMobileModal();
+
+      const bodyHtml = `
+        <div class="supportModal">
+          <div class="supportHero">
+            <div class="supportTitle">Podpořte DC ELO</div>
+            <div class="supportBrand">BY GRAIL SERIES</div>
+            <div class="supportTagline">Vaše podpora nám pomáhá organizovat lepší turnaje</div>
+          </div>
+
+          <div class="supportQrWrap">
+            <img class="supportQr" src="QR.jpg" alt="QR kód" loading="lazy" />
+          </div>
+
+          <div class="supportInfo">
+            <div class="supportInfoTitle">INFORMACE O ÚČTU:</div>
+            <div class="supportInfoLine"><b>Číslo účtu:</b> 2640017029/3030</div>
+            <div class="supportInfoLine"><b>IBAN:</b> CZ03 3030 0000 0026 4001 7029</div>
+            <div class="supportInfoLine"><b>BIC (SWIFT):</b> AIRACZP</div>
+          </div>
+
+          <div class="supportNote">
+            Do zprávy pro příjemce uveďte <b>DC ELO Podpora</b>
+          </div>
+
+          <div class="supportThanks">Děkujeme</div>
+        </div>
+      `;
+
+      if (window.openModal) {
+        window.openModal({ title: 'Podpořit', subtitle: '', html: bodyHtml, fullscreen: mobile });
+      }
+
+      const overlay = document.getElementById('modalOverlay');
+      if (overlay && !mobile) {
+        overlay.classList.add('isSupport');
+
+        const cleanup = () => overlay.classList.remove('isSupport');
+        const closeBtn = overlay.querySelector('#closeModalBtn');
+        if (closeBtn) closeBtn.addEventListener('click', cleanup, { once: true });
+        overlay.addEventListener('click', (ev) => { if (ev.target === overlay) cleanup(); }, { once: true });
+        const escHandler = (ev) => {
+          if (ev.key === 'Escape') {
+            cleanup();
+            window.removeEventListener('keydown', escHandler);
+          }
+        };
+        window.addEventListener('keydown', escHandler);
+      }
+    });
+  }
+
+  const link = document.getElementById('anonLink');
+  if (link) {
+    link.addEventListener('click', (e) => {
+      e.preventDefault();
+
+      const mobile = isMobileModal();
+
+      const bodyHtml = `
+        <div class="anonModal">
+          <h1 class="anonH1">Nechcete být na webu uvedeni?</h1>
+          <p>Rozumíme tomu.</p>
+          <p>
+            Zveřejňovaná data pocházejí z veřejně dostupných zdrojů, od organizátorů turnajů a lig nebo od heren, které s námi spolupracují. Projekt slouží k přehlednému zobrazování těchto informací na jednom místě.
+          </p>
+          <p>
+            Pokud si nepřejete být na webu dohledatelní pod svým jménem, vaše údaje kompletně anonimizujeme, takže vás podle nich již nebude možné identifikovat. Pro anonymizaci vyplňte následující formulář.
+          </p>
+          <div class="anonActions">
+            <a class="btnPrimary btnAnon" href="https://docs.google.com/forms/d/e/1FAIpQLSfwFbnvW9SnOvGZ3KGhk4mHx61GIrWdQBSIp8vGovC1xr9wDg/viewform?usp=dialog" target="_blank" rel="noopener noreferrer">Přejít na formulář</a>
+          </div>
+        </div>
+      `;
+
+      // Modal header
+      if (window.openModal) {
+        window.openModal({ title: 'Anonimizace', subtitle: '', html: bodyHtml, fullscreen: mobile });
+      }
+
+      // Visual tuning for the anonymizace modal only (kept local to the homepage)
+      const overlay = document.getElementById('modalOverlay');
+      if (overlay && !mobile) {
+        overlay.classList.add('isAnon');
+
+        const cleanup = () => overlay.classList.remove('isAnon');
+
+        // Close button
+        const closeBtn = overlay.querySelector('#closeModalBtn');
+        if (closeBtn) closeBtn.addEventListener('click', cleanup, { once: true });
+
+        // Click outside
+        overlay.addEventListener('click', (ev) => { if (ev.target === overlay) cleanup(); }, { once: true });
+
+        // ESC
+        const escHandler = (ev) => {
+          if (ev.key === 'Escape') {
+            cleanup();
+            window.removeEventListener('keydown', escHandler);
+          }
+        };
+        window.addEventListener('keydown', escHandler);
+      }
+    });
+  }
+</script>
 <script type="module" src="aktuality.js"></script>
 <script type="module" src="common.js"></script>
 <script type="module" src="app.js"></script>
