--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
           </div>
 
           <div class="supportQrWrap">
-            <img class="supportQr" src="QR.jpg" alt="QR kód" loading="lazy" />
+            <img class="supportQr" src="QR.png" alt="QR kód" loading="lazy" />
           </div>
 
           <div class="supportInfo">
